started implementing the graphical interface